--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+  padding: 0;
+  margin: 0px;
+  box-sizing: border-box;
+}
+*{
+  font-family: cursive;
+}
+
+@import 'node_modules/bootstrap/dist/css/bootstrap.min.css';
